[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minirag-hku"
version = "0.0.2"
authors = [
    {name = "Tianyu Fan"},
]
description = "MiniRAG: Towards Extremely Simple Retrieval-Augmented Generation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies=[
    "ascii_colors",
    "fastapi",
    "nest_asyncio",
    "numpy",
    "pipmaster",
    "python-dotenv",
    "python-multipart",
    "tenacity",
    "tiktoken",
    "torch",
    "tqdm",
    "uvicorn",
    "json_repair",
    "aiofiles",
    "aiohttp",
    "configparser",
    "httpx",
    "networkx",
    "nltk",
    "pydantic",
    "rouge",
    "setuptools",
    "xxhash",
    "sentence_transformers"
]
